# super-speedy-syslog-searcher

./: .gitattributes  .gitignore  .mlc.toml  .taplo.toml  CHANGELOG.md  Cargo.toml  Extended-Thoughts.md  LICENSE.txt  README.md  build.rs  deny.toml  run-tests.sh  rust-fmt.sh  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.claude/: CLAUDE.md
.git_hooks/: prepare-commit-msg
.github/: codecov.yml  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request--datetime-format-.md  feature-request--general-.md
.github/prompts/: sync-rust-platform-tiers.prompt.md
.github/tools/: install-libsystemd.sh
.github/workflows/: rust.yml
benches/: README.md  bench_decode_utf.rs  bench_prints.rs  bench_ranges.rs  bench_regex.rs  bench_slice_contains.rs  bench_syslinereader.rs
bindgen/: README.md  build.rs
bindgen/src/: _main.rs  lib.rs
debian/: changelog  control  copyright  rules  watch
logs/Alpine3.17/: utmp-offsets-x86_64.out.txt
logs/CentOS7/: boot.log-20230411  boot.log-20230422  grubby_prune_debug  pacct  secure  secure-20230422
logs/Debian11/: messages
logs/Debian9/: Xorg.0.log.old  apport.log.1  aptitude.4  dpkg.log.1  syslog  user.log.1  user.log.1.bz2  user.log.1.lz  user.log.1.lz4  user.log.1.lzo  user.log.1.xz  user.log.1.zst  user.log.tar  user.log.tar.lz  user.log.tar.lzo  user.log.tar.xz
logs/FreeBSD12.3/: nginx.log.0
logs/FreeBSD13.1/: bsdinstall_log  cron  dmesg.today  dmesg.yesterday  maillog  maillog.0.bz2  messages  mount.today  setuid.today  setuid.yesterday  userlog  utx.lastlogin  utx.log.bak  xferlog
logs/FreeBSD14.0/: cron
logs/MacOS11/: ._powermanagement  daily.out  monthly.out  weekly.out  wifi.log.0.bz2
logs/MacOS12.6/: daily.out  weekly.out
logs/MacOS13/: ._gtar_2024-03-24-202208_Mac-1711307523621.diag  gtar_2024-03-24-202208_Mac-1711307523621.diag
logs/NetBSD9.3/: Xorg.0.log.old  authlog  authlog.2  cron  cron.1  lastlogx  maillog  maillog.1  messages  wtmpx
logs/OpenBSD7.2/: authlog  daemon  lastlog  maillog  messages  secure  wtmp
logs/OpenBSD7.4/: messages
logs/OpenSUSE15/: btmp  btmp.utmpdump.txt  lastlog  lastlog.txt  utmp-offsets-x86_64.out.txt  wtmp  wtmp.utmpdump.txt
logs/RancherOS-1.5.8/: messages  syslog
logs/RedHatEnterprise9/: hawkey.log-20230423  hawkey.log-20230507  hawkey.log-20231215
logs/RockyLinux9/: cron  messages  messages-DropletAgent  secure
logs/Ubuntu18/: kern.log.1  vmware-installer
logs/Ubuntu22/: alternatives.log.1  apport.log.1  auth.log.1  (+8 more)
src/: README.md  common.rs  lib.rs  main.rs
src/python/s4_event_readers/: pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
src/python/s4_event_readers/s4_event_readers/: LICENSE-ccl_asldb.txt  LICENSE-etl_reader_etl_parser.txt  LICENSE-odl_reader.txt  __init__.py  __main__.py  ccl_asldb.py  etl_reader_dissect_etl.py  etl_reader_etl_parser.py  odl_reader.py
subprojects/ere/ere/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
subprojects/ere/ere-core/: Cargo.toml  README.md
subprojects/ere/ere-core/src/: epsilon_propogation.rs  lib.rs  parse_tree.rs  simplified_tree.rs  working_nfa.rs  working_u8_dfa.rs
subprojects/ere/ere-core/src/engines/: fixed_offset.rs  flat_lockstep_nfa.rs  flat_lockstep_nfa_u8.rs  nfa_static.rs  one_pass_u8.rs
subprojects/ere/ere-core/src/visualization/: layout.rs
subprojects/ere/ere-macros/: Cargo.toml  README.md
subprojects/ere/ere-macros/src/: lib.rs
subprojects/ere/ere/.github/workflows/: cargo-test.yml
subprojects/ere/ere/benches/: ere_benchmark.rs
subprojects/ere/ere/ere-core/: Cargo.toml  README.md
subprojects/ere/ere/ere-core/src/: config.rs  lib.rs  parse_tree.rs  simplified_tree.rs  working_nfa.rs  working_u8_dfa.rs  working_u8_nfa.rs
subprojects/ere/ere/ere-core/src/engines/: dfa_u8.rs  flat_lockstep_nfa.rs  flat_lockstep_nfa_u8.rs  mod.rs  nfa_static.rs  one_pass_u8.rs
subprojects/ere/ere/ere-core/src/visualization/: latex_graph.rs  layout.rs  mod.rs
subprojects/ere/ere/ere-macros/: Cargo.toml
subprojects/ere/ere/ere-macros/src/: lib.rs
subprojects/ere/ere/src/: lib.rs
subprojects/ere/ere/tests/: compile_fail.rs  pure_regex.rs  struct_attr_regex.rs
subprojects/ere/ere/tests/ui/: bind_named_missing_named.rs  bind_named_missing_named.stderr  bind_named_unbound_field.rs  bind_named_unbound_field.stderr  bind_strict_missing_unnamed.rs  bind_strict_missing_unnamed.stderr  engine_one_pass_not_applicable.rs  engine_one_pass_not_applicable.stderr  group_index_out_of_bounds.rs  group_index_out_of_bounds.stderr  missing_named_capture_field.rs  missing_named_capture_field.stderr  unbound_named_field.rs  unbound_named_field.stderr
subprojects/ere/ere_automator_procmacro/: .env  Cargo.toml  README.md  build.rs
subprojects/ere/ere_automator_procmacro/src/: ere_automator_procmacro.rs
subprojects/ere/ere_datetimes_impl/: Cargo.toml  README.md  build.rs  cargo-build-profiles-timeout.sh
subprojects/ere/ere_datetimes_impl/src/: ere_datetimes_impl.rs
tests/: blockreader_tests.rs  filepreprocessor_tests.rs  line_tests.rs  mod.rs  sysline_tests.rs  syslogprocessor_tests.rs
tools/: .gitignore  README.md  backup-dirty.sh  backup.sh  build-all-profiles.sh  build-regex-times.sh  cargo-bloat.sh  cargo-call-stack.sh  cargo-clippy.sh  cargo-deny.sh  cargo-doc.sh  cargo-fmt.sh  cargo-llvm-cov-combine-multiple.sh  cargo-llvm-cov-run.sh  cargo-macro-stats.sh  cargo-modules-structure.sh  cargo-msrv.sh  cargo-outdated.sh  cargo-print-type-sizes.sh  cargo-publish.sh  cargo-size.sh  cargo-test-cov-grcov.sh  cargo-test-cov-llvm.sh  cargo-test-cov-tarpaulin.sh  cargo-test-each.sh  cargo-test.sh  cargo-udeps.sh  cargo-upgrade.sh  changelog-link-gen.sh  clean-file.sh  codecov-validate.sh  codespell.sh  compare-cat.sh  compare-current-and-expected-common.sh  compare-current-and-expected-update.sh  compare-current-and-expected.sh  compare-current-and-expected_current.stdout  compare-current-and-expected_expected.out  compare-current-and-expected_expected.stderr  compare-current-and-expected_expected.stdout  (+63 more)
(+2635 files in other folders)
