# Cargo.toml

[package]
name = "super_speedy_syslog_searcher"
# The `description` should roughly match the first three paragraph sentences in `README.md`
description = "Speedily search and merge log messages by datetime. DateTime filters may be passed to narrow the search. s4 aims to be very fast."
repository = "https://github.com/jtmoon79/super-speedy-syslog-searcher"
authors = ["James Thomas Moon"]
license = "MIT"
keywords = ["syslog", "log", "log-parser", "search", "merge"]
# see https://crates.io/category_slugs
categories = [
    "command-line-utilities",
    "date-and-time",
    "filesystem",
]
readme = "README.md"
# XXX: `version` should match src/python/s4_event_readers/pyproject.toml:project:version
version = "0.8.80"
edition = "2024"
# MSRV: `rust-version` should match ./github/workflows/rust.yml:rust_msrv:msrv
rust-version = "1.85.0"
default-run = "s4"
# Do not set metadata fields `documentation` or `homepage` unless using
# non-standard websites.
# See <https://rust-lang.github.io/api-guidelines/documentation.html#cargotoml-includes-all-common-metadata-c-metadata>
exclude = [
    ".github/*",
    ".git_hooks/*",
    ".gitattributes",
    ".gitignore",
    ".mlc.toml",
    ".taplo.toml",
    ".vscode/*",
    "benches/bench_ranges.rs",
    "benches/bench_syslinereader.rs",
    "benches/README.md",
    "deny.toml",
    "flamegraph.svg",
    "logs/*",
    "perf.data",
    "releases/*",
    "src/**/README.md",
    "tmp/*",
    "tools/*",
    "tests/*",
    "rustfmt.toml",
]
# TODO: need to create build script to rebuild if `src/python/s4_event_readers` changes
#       see https://doc.rust-lang.org/cargo/reference/build-scripts.html#rerun-if-changed

[dependencies]
anyhow = "1.0.100"
bstr = "1.12.0"
bzip2-rs = "0.1.2"
cfg-if = "1.0.3"
chrono = "0.4.42"
clap = { version = "=4.5.48", features = ["derive", "env"] }
const_env = "0.1.5"
const_format = { version = "0.2.35", features = ["assertcp"] }
crossbeam-channel = "0.5.15"
ctrlc = "=3.4.7"
current_platform = "0.2.0"
dlopen2 = "0.8"
encoding_rs = "0.8.35"
# TODO: [2025/12] update `evtx` and use `RecordId` when Issue 234 is merged and released
#       https://github.com/omerbenamram/evtx/issues/234
evtx = { version = "0.11.0", features = ["multithreading"] }
flate2 = "1.1.6"
include_dir = "0.7.4"
itertools = "0.14.0"
jetscii = { version = "0.5.3", optional = true }
jwalk = "0.8.1"
kinded = "0.4.0"
lazy_static = "1.5.0"
lru = "0.16.3"
lzma-rs = "0.3.0"
lz4_flex = "0.12"
memchr = "2.7.6"
memoffset = "0.9.1"
min-max = "0.1.8"
more-asserts = "0.3.1"
mut_static = "5.0.0"
nix = "0.30.1"
numtoa = "=0.3.1"
# TODO: instead of `once_cell` crate, use `std::sync::OnceLock` and `get_or_try_init`
#       TRACKING: https://github.com/rust-lang/rust/issues/109737
once_cell = "1.21.3"
opt-level = "1.0.0"
pathsearch = "0.2.0"
phf = { version = "0.13.1", features = ["macros"] }
rand = { version = "0.9.2", features = ["thread_rng"] }
rangemap = "1.6.0"
regex = "1.11.3"
shell-escape = "0.1.5"
si_trace_print = "0.3.12"
stringzilla = { version = "3.12.6", optional = true }
tar = "0.4.44"
tempfile = "3.24.0"
termcolor = "1.4.1"
unicode-width = "0.2.1"
unroll = "0.1.5"
utf8_iter = "1.0.4"
version-compare = "0.2.1"
walkdir = "2.5.0"
# allocators
mimalloc = { version = "0.1.48", optional = true }
rpmalloc = { version = "0.2.2", optional = true }
tcmalloc = { version = "0.3.0", optional = true }
tikv-jemallocator = { version = "0.6.1", optional = true }

[lib]
name = "s4lib"
path = "src/lib.rs"
crate-type = ["lib"]
test = true
doc = true
doctest = true
bench = false
[target.'cfg(windows)'.dependencies]
libc = "0.2.176"

[[bin]]
name = "s4"
path = "src/bin/s4.rs"
test = true
doc = true
bench = false

[dev-dependencies]
arraystring = "0.3.0"
cargo-msrv = "0.15.1"
# XXX: exclude `cargo-llvm-cov` as it is only called by scripts
# cargo-llvm-cov
criterion = "0.5.1"
cross = "0.2.5"
filepath = "0.2.0"
filetime = "0.2.26"
# XXX: flamegraph version must match `.github/workflows/rust.yml:FLAMEGRAPH_VERSION`
flamegraph = "=0.6.10"
test-case = "3.3.1"

[features]
# to run more benchmarks pass `--features bench_*` to `cargo bench`
bench_jetscii = ["dep:jetscii"]
bench_memchr = []
bench_stringzilla = ["dep:stringzilla"]
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc"]
rpmalloc = ["dep:rpmalloc"]
tcmalloc = ["dep:tcmalloc"]

# release build optimizations
# from https://github.com/johnthagen/min-sized-rust
# also see https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
codegen-units = 1
panic = "abort"
strip = true
lto = true
opt-level = 3
debug = 0
split-debuginfo = "unpacked"

[profile.flamegraph]
inherits = "release"
codegen-units = 16
debug = 2
lto = false
panic = "unwind"
split-debuginfo = "unpacked"
strip = false

[profile.valgrind]
inherits = "release"
codegen-units = 16
debug = 2
lto = false
panic = "abort"
split-debuginfo = "unpacked"
strip = false

# XXX: profiles `jemalloc` and `mimalloc` are merely named different for distinguishment.
#      setting `features` in a profile has no effect; must still do:
#      `cargo build --profile jemalloc --features jemalloc`

[profile.jemalloc]
inherits = "release"

[profile.mimalloc]
inherits = "release"

[profile.rpmalloc]
inherits = "release"

[profile.tcmalloc]
inherits = "release"

# other helpful development tools
# cargo install --locked cargo-expand cargo-nextest

[[bench]]
name = "bench_decode_utf"
harness = false

[[bench]]
name = "bench_prints"
harness = false

[[bench]]
name = "bench_slice_contains"
harness = false
