[package]
name = "ere-core"
description = "A compile-time alternative for POSIX extended regular expressions."
version = "0.0.9910"
edition = "2021"
license = "MIT"
authors = ["2kai2kai2", "robertream", "jtmoon79"]
repository = "https://github.com/jtmoon79/super-speedy-syslog-searcher_ere-core"

[dependencies]
proc-macro2 = "=1.0.106"
quote = "=1.0.45"
syn = { version = "=2.0.117", features = ["parsing"] }
thiserror = "=2.0.18"
utf8-ranges = "=1.0.5"

[features]
unstable-attr-regex = []
