# subprojects/ere/ere-core/Cargo.toml

[package]
name = "super-speedy-syslog-searcher_ere-core"
description = "A compile-time alternative for POSIX extended regular expressions."
version.workspace = true
edition = "2021"
license.workspace = true
authors = ["2kai2kai2", "robertream", "jtmoon79"]
repository.workspace = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["parsing"] }
thiserror.workspace = true
utf8-ranges.workspace = true

[features]
unstable-attr-regex = []
