# subprojects/ere/ere-core/Cargo.toml

[package]
name = "super-speedy-syslog-searcher_ere-core"
description = "Support crate for super-speedy-syslog-searcher_ere."
version = "0.10.3"
edition = "2021"
license.workspace = true
authors = ["2kai2kai2", "robertream", "jtmoon79"]
repository.workspace = true
exclude = [
    "target/*",
]

[dependencies]
bitvec.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["parsing"] }
thiserror.workspace = true
utf8-ranges.workspace = true

[features]
unstable-attr-regex = []
