# subprojects/ere/ere-macros/Cargo.toml

[package]
name = "super-speedy-syslog-searcher_ere-macros"
description = "Support crate for super-speedy-syslog-searcher_ere."
version = "0.10.0"
edition = "2021"
license.workspace = true
authors = ["2kai2kai2", "robertream", "jtmoon79"]
repository.workspace = true
exclude = [
    "target/*",
]

[lib]
proc-macro = true

[dependencies]
ere-core = { version = "=0.10.0", path = "../ere-core", package = "super-speedy-syslog-searcher_ere-core" }
quote.workspace = true
syn = { workspace = true, features = ["parsing"] }

[features]
unstable-attr-regex = ["ere-core/unstable-attr-regex"]
