# subprojects/ere/ere/Cargo.toml

[package]
name = "super-speedy-syslog-searcher_ere"
description = "A compile-time alternative for POSIX extended regular expressions."
version.workspace = true
edition = "2021"
license.workspace = true
authors = ["2kai2kai2", "robertream", "jtmoon79"]
categories = ["text-processing"]
readme = "README.md"
repository.workspace = true
exclude = [
    ".github/*",
    ".vscode/*",
    "benches/*",
    "ROADMAP.md",
    "tests/*",
]

[dependencies]
ere-core = { version = "=0.9.81", path = "../ere-core", package = "super-speedy-syslog-searcher_ere-core" }
ere-macros = { version = "=0.9.81", path = "../ere-macros", package = "super-speedy-syslog-searcher_ere-macros" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }
regex = { version = "1.12.2" }                                       # for benchmark comparison
trybuild = { version = "1.0", features = ["diff"] }

[features]
unstable-attr-regex = [
    "ere-core/unstable-attr-regex",
    "ere-macros/unstable-attr-regex",
]
# these tests are expected to fail to compile and are fragile.
tests-compile-fail = []

[[bench]]
name = "ere_benchmark"
harness = false        # use criterion
