# subprojects/ere/ere_automator_procmacro/Cargo.toml

[package]
name = "super-speedy-syslog-searcher_ere_automator_procmacro"
version = "0.0.9950"
edition = "2024"

[lib]
proc-macro = true
path = "src/ere_automator_procmacro.rs"

[dependencies]
const-str = "=1.1.0"
ere = { version = "=0.0.9930", path = "../ere", package = "super-speedy-syslog-searcher_ere", features = ["unstable-attr-regex"] }
lazy_static = "=1.5.0"
macro-string = "=0.2.0"
proc-macro2 = { version = "=1.0.106", features = ["span-locations"] }
quote = "=1.0.45"
syn = { version = "=2.0.117", features = ["full", "parsing"] }

[build-dependencies]
dotenvy = "=0.15.7"
