# subprojects/ere/ere_automator_procmacro/Cargo.toml

[package]
name = "super-speedy-syslog-searcher_ere_automator_procmacro"
description = "Support crate for super-speedy-syslog-searcher. proc-macro to further automate creation of regexes with the super-speedy-syslog-searcher_ere crate."
version = "0.10.3"
edition = "2024"
license.workspace = true
authors = ["jtmoon79"]
repository.workspace = true
exclude = [
    "target/*",
]

[lib]
proc-macro = true
path = "src/ere_automator_procmacro.rs"

[dependencies]
const-str.workspace = true
ere = { version = "=0.10.3", path = "../ere", package = "super-speedy-syslog-searcher_ere", features = ["unstable-attr-regex"] }
lazy_static.workspace = true
macro-string = "=0.3.0"
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote.workspace = true
syn = { workspace = true, features = ["full", "parsing"] }

[build-dependencies]
dotenvy.workspace = true
