# subprojects/ere/ere_datetimes_impl/Cargo.toml

[package]
name = "super-speedy-syslog-searcher_ere_datetimes_impl"
version.workspace = true
edition = "2024"
license.workspace = true
authors = ["jtmoon79"]
repository.workspace = true

[dependencies]
const-str.workspace = true
ere = { version = "=0.9.81", path = "../ere", package = "super-speedy-syslog-searcher_ere" }
ere_automator_procmacro = { version = "=0.9.81", path = "../ere_automator_procmacro", package = "super-speedy-syslog-searcher_ere_automator_procmacro" }
lazy_static.workspace = true
more-asserts.workspace = true
si_trace_print.workspace = true

[lib]
path = "src/ere_datetimes_impl.rs"

[build-dependencies]
dotenvy.workspace = true
