# subprojects/ere/ere_datetimes_impl/Cargo.toml

[package]
name = "super-speedy-syslog-searcher_ere_datetimes_impl"
description = "Support crate for super-speedy-syslog-searcher. Compile-time implementation of datetime regexes."
version = "0.10.3"
edition = "2024"
license.workspace = true
authors = ["jtmoon79"]
repository.workspace = true
exclude = [
    ".github/*",
    ".vscode/*",
    "benches/*",
    "ROADMAP.md",
    "target/*",
    "tests/*",
    "S4_BUILD_REGEX",
]

[dependencies]
bitvec.workspace = true
const-str.workspace = true
# PROJECT VERSION LAST PUBLISHED
ere = { version = "=0.10.3", path = "../ere", package = "super-speedy-syslog-searcher_ere" }
ere_automator_procmacro = { version = "=0.10.3", path = "../ere_automator_procmacro", package = "super-speedy-syslog-searcher_ere_automator_procmacro" }
lazy_static.workspace = true
more-asserts.workspace = true
si_trace_print.workspace = true

[lib]
path = "src/ere_datetimes_impl.rs"

[build-dependencies]
dotenvy.workspace = true
build-print.workspace = true
